[package]
name = "ractor_actors"
version = "0.4.9"
authors = ["Sean Lawlor"]
description = "Helpful actors built with Ractor"
documentation = "https://docs.rs/ractor_actors"
license = "MIT"
edition = "2021"
keywords = ["actor", "ractor"]
repository = "https://github.com/slawlor/ractor"
readme = "../README.md"
homepage = "https://github.com/slawlor/ractor"
categories = ["asynchronous"]

[features]
filewatcher = ["notify"]
net = ["tokio/net", "tokio/io-util", "tokio/macros", "tokio-rustls"]
time = ["chrono", "cron", "dep:async-trait"]
streams = ["tokio-stream", "dep:async-trait"]
sync = []
async-trait = ["dep:async-trait", "ractor/async-trait"]

default = ["filewatcher", "net", "time", "streams", "sync"]

[dependencies]
# Required dependencies
ractor = { version = "0.15" }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
# Feature-specific dependencies
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
cron = { version = "0.12", optional = true }
tokio-stream = { version = "0.1", optional = true }
notify = { version = "8", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "rt-multi-thread", "signal"] }
tracing-glog = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-test = "0.2"