[package]
name = "ractor_actors"
version = "0.4.10"
authors = ["Sean Lawlor"]
description = "Helpful actors built with Ractor"
documentation = "https://docs.rs/ractor_actors"
license = "MIT"
edition = "2021"
keywords = ["actor", "ractor"]
repository = "https://github.com/slawlor/ractor"
readme = "../README.md"
homepage = "https://github.com/slawlor/ractor"
categories = ["asynchronous"]

[features]
filewatcher = ["notify"]
net = ["tokio/net", "tokio/io-util", "tokio/macros", "tokio-rustls"]
time = ["cron-0-12"] # deprecated
cron-0-12 = ["dep:async-trait", "dep:chrono", "dep:cron-0-12"]
cron-0-13 = ["dep:async-trait", "dep:chrono", "dep:cron-0-13"]
cron-0-14 = ["dep:async-trait", "dep:chrono", "dep:cron-0-14"]
cron-0-15 = ["dep:async-trait", "dep:chrono", "dep:cron-0-15"]
cron-0-16 = ["dep:async-trait", "dep:chrono", "dep:cron-0-16"]
streams = ["tokio-stream", "dep:async-trait"]
sync = []
watchdog = []
async-trait = ["dep:async-trait", "ractor/async-trait"]

default = ["filewatcher", "net", "time", "streams", "sync", "watchdog"]

[dependencies]
# Required dependencies
ractor = { version = "0.15.8" }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
# Feature-specific dependencies
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
cron-0-12 = { package = "cron", version = "0.12", optional = true }
cron-0-13 = { package = "cron", version = "0.13", optional = true }
cron-0-14 = { package = "cron", version = "0.14", optional = true }
cron-0-15 = { package = "cron", version = "0.15", optional = true }
cron-0-16 = { package = "cron", version = "0.16", optional = true }
tokio-stream = { version = "0.1", optional = true }
notify = { version = "8", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "rt-multi-thread", "signal"] }
tracing-glog = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

[[example]]
name = "cron"
required-features = ["cron-0-16"]

[[example]]
name = "tcp_client"
required-features = ["tokio/io-std", "watchdog"]

[package.metadata.docs.rs]
features = ["cron-0-12", "cron-0-13", "cron-0-14", "cron-0-15", "cron-0-16"]
