[package]
name = "xtask"
default-run = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
xtaskops = "0.4"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
